# real-estate

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
scripts/: backfill_normalized_addresses.py  seed.py
src/realestate/: api.py  auth.py  cli.py  geocoding.py  interfaces.py  messaging.py  models.py  store.py  valuation.py
src/realestate/analyzers/: __init__.py  cash_flow.py  comparative.py  distress_stage.py  equity_estimate.py  loan_age.py  owner_occupied.py  price_per_sqft.py  time_pressure.py
src/realestate/output/: __init__.py  csv_out.py  json_out.py  table.py
src/realestate/sources/: __init__.py  csv_file.py  hud_reo.py  meridian_nod.py  mock.py
tests/: conftest.py  test_analyzers.py  test_models.py  test_new_sources.py  test_output.py  test_sources.py  test_store.py
web/: .env.example  index.html  package-lock.json  package.json
web/src/: App.jsx  api.js  index.css  main.jsx
web/src/components/: AuthGate.jsx  LeadsPage.jsx  MessagesPage.jsx  NotificationsBell.jsx  PropertyDetail.jsx  PropertyTable.jsx  SettingsPage.jsx  StatsBar.jsx
